--- a/public/home.css
+++ b/public/home.css
@@ -77,7 +77,7 @@ header{
 .wrapper{
     position: relative;
     width: 400px;
-    height: 440px;
+    height: auto;
     background:transparent ;
     border: 2px solid rgba(255,255,255,.5);
     border-radius: 20px;
@@ -151,22 +151,36 @@ header{
     color:white;
     font-size: 1em;
     font-weight: 500;
-
 }
-.register{
-    font-size: .9em;
-    color: #121e2f;
+.lgn-btn{
+    width: auto;
+    height:auto;
+    padding:10px 10px ;
+    margin:10px 5px 5px 10px;
+    background: #121e2f;
+    border:none;
+    outline:none;
+    border-radius:6px;
+    cursor:pointer;
+    color:white;
+    font-size: 1em;
+    font-weight: 500;
+}
+.message{
+    font-size: 1.2em;
+    color: #FE0000;
+    font-weight: 600;
     text-align: center;
     font-weight: 500;
     margin:25px 0 10px;
+    display:none;
 }
-.register p a{
-    color: #121e2f;
+.message .lgn-btn a{
+    color: white;
     text-decoration: none;
-    font-weight: 600;
 
 }
-.register p a:hover{
+.message .lgn-btn a:hover{
     text-decoration: underline;
 
 }
@@ -184,4 +198,15 @@ header{
     align-items: center;
     border-bottom-left-radius: 20px;
     cursor:pointer;
+}
+.alert {
+    position: fixed;
+    bottom: 20px;
+    right: 20px;
+    background-color: #ff3333;
+    color: white;
+    padding: 10px 20px;
+    border-radius: 5px;
+    box-shadow: 0px 0px 5px rgba(0, 0, 0, 0.2);
+    z-index: 1000;
 }
